--- a/index.html
+++ b/index.html
@@ -67,45 +67,45 @@
 
     <section class="section-2">
         <div class="section-2-heading">
-            <p>Popular localities in and around Delhi NCR</p>
+            <p>Popular localities in and around Kolkata</p>
         </div>
         <div class="section-2-container">
             <div class="section-2-items">
                 <div class="section-2-item">
-                    <p class="item-head">Cannaught Place</p>
-                    <p class="item-subhead">388 Places</p>
+                    <p class="item-head">Park Street Area</p>
+                    <p class="item-subhead">225 Places</p>
                 </div>
                 <div class="section-2-item">
-                    <p class="item-head">Cannaught Place</p>
-                    <p class="item-subhead">388 Places</p>
+                    <p class="item-head">Sector 5, Salt Lake</p>
+                    <p class="item-subhead">485 Places</p>
                 </div>
                 <div class="section-2-item">
-                    <p class="item-head">Cannaught Place</p>
-                    <p class="item-subhead">388 Places</p>
+                    <p class="item-head">Sector 1, Salt Lake</p>
+                    <p class="item-subhead">347 Places</p>
                 </div>
                 <div class="section-2-item">
-                    <p class="item-head">Cannaught Place</p>
-                    <p class="item-subhead">388 Places</p>
+                    <p class="item-head">Ballygunge</p>
+                    <p class="item-subhead">332 Places</p>
                 </div>
                 <div class="section-2-item">
-                    <p class="item-head">Cannaught Place</p>
-                    <p class="item-subhead">388 Places</p>
+                    <p class="item-head">Southern Avenue</p>
+                    <p class="item-subhead">158 Places</p>
                 </div>
                 <div class="section-2-item">
-                    <p class="item-head">Cannaught Place</p>
-                    <p class="item-subhead">388 Places</p>
+                    <p class="item-head">New Town</p>
+                    <p class="item-subhead">1527 Places</p>
                 </div>
                 <div class="section-2-item">
-                    <p class="item-head">Cannaught Place</p>
-                    <p class="item-subhead">388 Places</p>
+                    <p class="item-head">Camac Street</p>
+                    <p class="item-subhead">86 Places</p>
                 </div>
                 <div class="section-2-item">
-                    <p class="item-head">Cannaught Place</p>
-                    <p class="item-subhead">388 Places</p>
+                    <p class="item-head">Chinar Park</p>
+                    <p class="item-subhead">546 Places</p>
                 </div>
                 <div class="section-2-item">
-                    <p class="item-head">Cannaught Place</p>
-                    <p class="item-subhead">388 Places</p>
+                    <p class="item-head">Dumdum</p>
+                    <p class="item-subhead">470 Places</p>
                 </div>
             </div>
         </div>
