--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="search">
                 <div class="search-item">
                     <i class="fas fa-map-marker-alt"></i>
-                    <p>Ywca, 1, Ashoka Rd, Hanu</p>
+                    <p>DumDum, Kolkata</p>
                 </div>
                 <div class="search-item">
                     <i class="fas fa-search"></i>
